--- a/packages/install-ses/package.json
+++ b/packages/install-ses/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "ava": "^3.12.1"
   },
-  "peerDependencies": {
+  "dependencies": {
     "@agoric/babel-standalone": "^7.14.3",
     "@agoric/eventual-send": "^0.14.0",
     "@agoric/lockdown": "^0.1.0"
