fix(agoric-cli): update `package.json` to publish correctly

--- a/packages/agoric-cli/package.json
+++ b/packages/agoric-cli/package.json
@@ -4,9 +4,9 @@
   "description": "Manage the Agoric Javascript smart contract platform",
   "type": "module",
   "main": "src/main.js",
-  "bin": "bin/agoric",
+  "bin": "src/entrypoint.js",
   "files": [
-    "lib",
+    "src",
     "exported.js"
   ],
   "scripts": {
