--- a/packages/agoric-cli/package.json
+++ b/packages/agoric-cli/package.json
@@ -10,7 +10,7 @@
     "exported.js"
   ],
   "scripts": {
-    "build": "exit 0",
+    "build": "./scripts/get-sdk-package-names.js > src/sdk-package-names.js",
     "test": "ava",
     "test:c8": "c8 $C8_OPTIONS ava --config=ava-nesm.config.js",
     "test:xs": "exit 0",
